--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>gts-manage-education</module>
+        <module>gts-framework-pojo</module>
     </modules>
 
     <parent>
