--- a/gts-manage-education/pom.xml
+++ b/gts-manage-education/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>gts-framework-pojo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.gootschool.gts</groupId>
+            <artifactId>gts-framework-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <!--mybatis-plus-->
         <dependency>
