--- a/gts-manage-education/pom.xml
+++ b/gts-manage-education/pom.xml
@@ -17,12 +17,14 @@
         <dependency>
             <groupId>com.gootschool.gts</groupId>
             <artifactId>gts-framework-pojo</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.gootschool.gts</groupId>
             <artifactId>gts-framework-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gootschool.gts</groupId>
+            <artifactId>gts-framework-common</artifactId>
         </dependency>
 
         <!--mybatis-plus-->
