分页查询&条件查询

--- a/gts-framework-api/pom.xml
+++ b/gts-framework-api/pom.xml
@@ -16,6 +16,10 @@
             <groupId>com.gootschool.gts</groupId>
             <artifactId>gts-framework-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.gootschool.gts</groupId>
+            <artifactId>gts-framework-pojo</artifactId>
+        </dependency>
 
         <!--swagger-->
         <dependency>
