--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>gts-framework-pojo</module>
         <module>gts-framework-api</module>
         <module>gts-framework-common</module>
+        <module>gts-framework-gateway</module>
     </modules>
 
     <parent>
@@ -29,6 +30,8 @@
         <com.gootschool.gts.common>1.0-SNAPSHOT</com.gootschool.gts.common>
 
         <java.version>1.8</java.version>
+        <org.spring.cloud.version>Finchley.RELEASE</org.spring.cloud.version>
+        <org.spring.cloud.openfeign.version>2.1.3.RELEASE</org.spring.cloud.openfeign.version>
         <com.baomidou.mybatis.plus.version>3.0.5</com.baomidou.mybatis.plus.version>
         <org.apache.velocity.velocity.version>2.0</org.apache.velocity.velocity.version>
         <io.springfox.swagger.version>2.7.0</io.springfox.swagger.version>
@@ -54,6 +57,21 @@
                 <groupId>com.gootschool.gts</groupId>
                 <artifactId>gts-framework-common</artifactId>
                 <version>${com.gootschool.gts.common}</version>
+            </dependency>
+
+            <!--springCloud-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${org.spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!--openfeign-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${org.spring.cloud.openfeign.version}</version>
             </dependency>
 
             <!--数据库驱动-->
