--- a/gts-manage-education/pom.xml
+++ b/gts-manage-education/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>gts-framework-common</artifactId>
         </dependency>
 
+        <!--Eureka客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!--mybatis-plus-->
         <dependency>
             <groupId>com.baomidou</groupId>
