--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,14 @@
         <module>gts-framework-api</module>
         <module>gts-framework-common</module>
         <module>gts-framework-gateway</module>
+        <module>gts-framework-register-center</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.7.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> <!-- 2.0.7 lookup parent from repository -->
     </parent>
 
     <properties>
