--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,13 @@
         <module>gts-framework-common</module>
         <module>gts-framework-gateway</module>
         <module>gts-framework-register-center</module>
+        <module>gts-service-upload</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.7.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
         <relativePath/> <!-- 2.0.7 lookup parent from repository -->
     </parent>
 
@@ -37,7 +38,7 @@
         <org.apache.velocity.velocity.version>2.0</org.apache.velocity.velocity.version>
         <io.springfox.swagger.version>2.7.0</io.springfox.swagger.version>
         <mysql.connector.version>8.0.18</mysql.connector.version>
-        <guli.version>0.0.1-SNAPSHOT</guli.version>
+        <com.aliyun.oss.version>3.8.0</com.aliyun.oss.version>
     </properties>
 
     <dependencyManagement>
@@ -105,6 +106,12 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${io.springfox.swagger.version}</version>
+            </dependency>
+            <!--阿里云OSS-->
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${com.aliyun.oss.version}</version>
             </dependency>
 
         </dependencies>
