--- a/gts-service-upload/pom.xml
+++ b/gts-service-upload/pom.xml
@@ -14,22 +14,45 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.gootschool.gts</groupId>
+            <artifactId>gts-framework-pojo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gootschool.gts</groupId>
+            <artifactId>gts-framework-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.gootschool.gts</groupId>
+            <artifactId>gts-framework-common</artifactId>
+        </dependency>
+
+        <!--Eureka客户端-->
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+
+        <!--swagger-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-
+        <!--阿里云OSS-->
         <dependency>
             <groupId>com.aliyun.oss</groupId>
             <artifactId>aliyun-sdk-oss</artifactId>
+        </dependency>
+
+        <!--日期时间工具-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.1</version>
         </dependency>
 
     </dependencies>
