--- a/gts-manage-education/pom.xml
+++ b/gts-manage-education/pom.xml
@@ -59,6 +59,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+        <!--文件上传-->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
 
     </dependencies>
 
