--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>gts-framework-gateway</module>
         <module>gts-framework-register-center</module>
         <module>gts-service-upload</module>
+        <module>gts-service-usercenter</module>
     </modules>
 
     <parent>
@@ -217,6 +218,16 @@
                 </configuration>
             </plugin>
         </plugins>
+        <!-- 项目打包时会将java目录中的*.xml文件也进行打包 -->
+        <!--<resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>-->
     </build>
 
 </project>
