--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>gts-framework-register-center</module>
         <module>gts-service-upload</module>
         <module>gts-service-usercenter</module>
+        <module>gts-service-statistics</module>
     </modules>
 
     <parent>
