--- a/gts-framework-pojo/pom.xml
+++ b/gts-framework-pojo/pom.xml
@@ -23,6 +23,11 @@
             <version>3.0.5</version>
             <scope>compile</scope>
         </dependency>
+        <!-- elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
 
