--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>gts-service-usercenter</module>
         <module>gts-service-statistics</module>
         <module>gts-service-search</module>
+        <module>gts-service-goods</module>
     </modules>
 
     <parent>
